force-app/main/default/objects/School__c/fields/Number_of_departments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_departments__c</fullName>
    <label>Number of departments</label>
    <summaryForeignKey>Deapartment__c.school__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>