force-app/main/default/objects/School__c/fields/physical_location__c.field-meta.xml
<CustomField>
    <fullName>physical_location__c</fullName>
    <formula>IMAGE(&quot;http://maps.googleapis.com/maps/api/staticmap?center=houston&amp;zoom=13&amp;size=600x300&amp;maptype=roadmap&amp;markers=color:blue%7Clabel:S%7C40.702147,-74.015794&amp;markers=color:green%7Clabel:G%7C40.711614,-74.012318markers=color:red%7Clabel:C%7C40.718217,-73.998&amp;284&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>physical location</label>
    <type>Text</type>
</CustomField>