force-app/main/default/objects/School__c/fields/School_Email__c.field-meta.xml
<CustomField>
    <fullName>School_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>School Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>