force-app/main/default/objects/School__c/fields/school_link__c.field-meta.xml
<CustomField>
    <fullName>school_link__c</fullName>
    <label>school link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>